style.css
/* ... */
.contact-btn-div {
    width: 100%;
    padding-top: 50px;
    height: fit-content;
    display: flex;
    align-items: center;
    justify-content: flex-start
}

.letsTalkBtn {
    position: relative;
    border: none;
    width: 180px;
    height: 40px;
    border-radius: 0;
    cursor: pointer;
    transition: .3s
}

.letsTalkBtn-text {
    width: 100%;
    height: 100%;
    background-color: rgba(230, 230, 230, .466);
    border: none;
    border-radius: 7px;
    backdrop-filter: blur(5px);
    color: #000;
    align-items: center;
    justify-content: center;
    letter-spacing: .8px
}

.cta:hover span,
.text,
.tooltip {
    color: #fff
}

.resume-btn,
.sign {
    align-items: center;
    transition-duration: .3s;
    display: flex
}

.letsTalkBtn-BG {
    position: absolute;
    width: 100%;
    height: 100%;
    background-image: linear-gradient(150deg, #71cbff, #8000ff);
    z-index: -1;
    left: 6px;
    top: 6px;
    border-radius: 7px;
    pointer-events: none;
    transition: .3s
}

.letsTalkBtn:hover {
    transform: translateY(-2px) translateX(-2px)
}

.letsTalkBtn:hover .letsTalkBtn-BG {
    transform: translateY(2px) translateX(2px)
}

.letsTalkBtn:active {
    transform: translateY(7px) translateX(7px)
}

.letsTalkBtn:active .letsTalkBtn-BG {
    transform: translateY(-7px) translateX(-7px)
}

.resume-btn {
    margin-top: 25px;
    justify-content: flex-start;
    width: 45px;
    height: 45px;
    border: none;
    border-radius: 50%;
    cursor: pointer;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, .199);
    background: linear-gradient(82.3deg, #965de9 10.8%, #6358ee 94.3%);
    position: relative
}

.projects-heading-article,
.projectsHeadingP,
.section-heading-article,
.sectionHeadingP,
.skills-heading-article,
.skillsHeadingP {
    background-image: -webkit-gradient(linear, left top, right top, var(--static-heading-gradient-blue), var(--static-heading-gradient-pink));
    background-image: -webkit-linear-gradient(left, var(--static-heading-gradient-blue), var(--static-heading-gradient-pink))
}

.dp::after,
.dp::before,
.text {
    position: absolute
}

.sign {
    width: 100%;
    justify-content: center
}

.sign svg {
    width: 17px
}

.text {
    right: 0;
    width: 0%;
    opacity: 0;
    font-size: 1em;
    font-weight: 600;
    transition-duration: .3s
}

.resume-btn:hover {
    width: 130px;
    border-radius: 40px;
    transition-duration: .3s
}

.resume-btn:hover .sign {
    width: 30%;
    transition-duration: .3s;
    padding-left: 20px
}

.resume-btn:hover .text {
    opacity: 1;
    width: 70%;
    transition-duration: .3s;
    padding-right: 10px
}

.dp,
.dp::after,
.dp::before,
.dp:hover::after,
.dp:hover::before {
    transition-duration: .5s
}

.resume-btn:active {
    transform: translate(2px, 2px)
}

.about-section-container {
    width: 100%;
    height: fit-content;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding-top: 200px
}

.about-section,
.projects-section-div,
.skills-section {
    width: 60%;
    display: flex;
    flex-direction:column;
    align-items: center;
    justify-content: center
}

.projects-heading,
.section-heading,
.skills-heading {
    width: 100%;
    display: flex;
    align-items: center;
    gap: 10px
}

.dp img,
.dp::after,
.dp::before {
    width: 300px
}

.projects-heading-article,
.section-heading-article,
.skills-heading-article {
    font-size: 3rem;
    font-family: fira code;
    font-weight: 500;
    background-image: linear-gradient(90deg, var(--static-heading-gradient-blue), var(--static-heading-gradient-pink));
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent
}

.projectsHeadingP,
.sectionHeadingP,
.skillsHeadingP {
    width: 300px;
    height: 1px;
    background-image: linear-gradient(90deg, var(--static-heading-gradient-blue), var(--static-heading-gradient-pink))
}

.info-dp-section {
    width: 100%;
    display: flex;
    margin-top: 30px
}

.about-info {
    width: 100%;
    display: flex;
    flex-direction: column
}

.about-info p {
    line-height: 1.6
}

.about-info p + p {
    margin-top: 1.2em
}

.dp {
    width: 40%;
    display: flex;
    align-items: flex-start;
    justify-content: center;
    position: relative
}

.dp::before {
    box-shadow: 2px 2px 0 inset #8000ff, -2px -2px 0 inset transparent
}

.dp::after {
    box-shadow: 2px 2px 0 inset transparent, -2px -2px 0 inset #8000ff
}

.dp:hover::after {
    transform: translate(20px, 20px)
}

.dp:hover::before {
    transform: translate(-20px, -20px)
}

.skills-section-container {
    padding-bottom: 150px;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center
}

.language-speak,
.tech-stack-wrapper {
    width: 100%;
    display: flex;
    align-items: center
}

.language-speak {
    height: 50px;
    justify-content: center
}

.language-speak article {
    font-size: 2rem;
    font-weight: 600
}

.frontend-dev-section {
    width: 100%;
    margin-top: 50px
}

.frontend-dev-heading {
    width: 100%;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 3rem;
    font-weight: 900;
    height: 100px;
    letter-spacing: 5px;
    background-image: -webkit-gradient(linear, left top, right top, var(--static-heading-gradient-blue), var(--static-heading-gradient-pink));
    background-image: -webkit-linear-gradient(left, var(--static-heading-gradient-blue), var(--static-heading-gradient-pink));
    background-image: linear-gradient(90deg, var(--static-heading-gradient-blue), var(--static-heading-gradient-pink));
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent
}

.project-box,
.tech-stack-box {
    background-image: linear-gradient(to bottom right, var(--tech-stack-box-first-color), var(--tech-stack-box-second-color))
}
/* ... */

